feat: Implemented master and styleType api
